[project]
name = "tierkreis-riken-starter"
version = "0.1.0"
description = "Example projects and workflows for using Tierkreis on Riken (Fugaku)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytket>=2.11.0",
    "pytket-qiskit>=0.76.0",
    "qiskit-qasm3-import>=0.6.0",
    "tierkreis",
]

[tool.uv]
package = true

[tool.uv.sources]
tierkreis = { git = "https://github.com/Quantinuum/tierkreis.git", subdirectory = "tierkreis", branch = "chore/tierkreis-riken-starter" }

[tool.setuptools]
packages = ["workers", "workers_external", "graphs"]
